# WAZASH

./: .env.example  .gitignore  AGENTS.md  ORDER.md  README.md  architecture.md  opencode.jsonc
product/backend/: .dockerignore  .env.example  Dockerfile  EPIC02_DOC.md  EPIC02_PLAN.md  EPIC03_DOC.md  EPIC03_PLAN.md  EPIC04_DOC.md  EPIC04_PLAN.md  EPIC05_DOC.md  EPIC05_PLAN.md  EPIC06_DOC.md  EPIC06_PLAN.md  EPIC08_DOC.md  EPIC08_PLAN.md  EPIC09_DOC.md  EPIC09_PLAN.md  EPIC11_DOC.md  README.md  SECURITY_AUDIT_EPIC01.md  SECURITY_AUDIT_EPIC02.md  SECURITY_AUDIT_EPIC03.md  SECURITY_AUDIT_EPIC04.md  SECURITY_AUDIT_EPIC05.md  SECURITY_AUDIT_EPIC06.md  SECURITY_AUDIT_EPIC08.md  SECURITY_AUDIT_EPIC09.md  pyproject.toml
product/backend/app/: main.py
product/backend/app/alerts/: router.py  rules.py  schemas.py
product/backend/app/assets/: router.py  schemas.py
product/backend/app/audit/: router.py  schemas.py
product/backend/app/auth/: router.py  schemas.py
product/backend/app/core/: config.py  database.py  security.py  storage.py
product/backend/app/correlation/: router.py  schemas.py
product/backend/app/events/: router.py  schemas.py
product/backend/app/health/: router.py
product/backend/app/heartbeat/: router.py  schemas.py
product/backend/app/models/: __init__.py  alert.py  asset.py  audit.py  (+4 more)
product/backend/tests/: conftest.py  test_alerts.py  test_assets.py  test_audit.py  test_auth.py  test_correlation.py  test_events.py  test_exports.py  test_health.py  test_heartbeat.py
product/backend/wazash_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+28 files in other folders)
